--- a/index.html
+++ b/index.html
@@ -42,31 +42,27 @@
       </form>
     </nav> -->
 
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #e3f2fd;">
-      <a class="navbar-brand">Christopher Lee</a>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark p-0 border-bottom" style="background-color: white;">
+      <a class="navbar-brand bg-info ml-5 p-4 display-4 font-weight-bold">Christopher Lee</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto mr-5">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link text-black-50 border-right py-0 px-2" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link text-black-50 border-right py-0 px-2" href="#">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+            <a class="nav-link text-black-50 py-0 px-2" href="#">Contact</a>
         </ul>
       </div>
-    </nav> -->
+    </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <!-- <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand navbar-dark bg-dark">Christopher Lee</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -84,7 +80,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
     <h1>Hello, world!</h1>
 
