--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <style>
+      #font-update {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 30px;
+      }
+    </style>
     <title>Hello, world!</title>
   </head>
   <body>
@@ -43,7 +48,7 @@
     </nav> -->
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark p-0 border-bottom" style="background-color: white;">
-      <a class="navbar-brand bg-info ml-5 p-4 display-4 font-weight-bold">Christopher Lee</a>
+      <a class="navbar-brand bg-info ml-5 p-4 display-4 font-weight-bold" id="font-update">Christopher Lee</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
