added flex code and breakpoints to nav bar

--- a/index.html
+++ b/index.html
@@ -47,13 +47,10 @@
       </form>
     </nav> -->
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark p-0 border-bottom" style="background-color: white;">
-      <a class="navbar-brand bg-info ml-5 p-4 display-4 font-weight-bold" id="font-update">Christopher Lee</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto mr-5">
+    <nav class="navbar navbar-expand flex-column flex-sm-row fixed-top navbar-dark p-0 border-bottom" style="background-color: white;">
+      <a class="navbar-brand bg-info ml-0 ml-sm-3 ml-md-5 p-4 display-4 font-weight-bold" id="font-update">Christopher Lee</a>
+      <div class="navbar-nav-scroll ml-sm-auto mr-0 mr-sm-3 mr-md-5">
+        <ul class="navbar-nav ">
           <li class="nav-item active">
             <a class="nav-link text-black-50 border-right py-0 px-2" href="#">About</a>
           </li>
@@ -63,7 +60,7 @@
           <li class="nav-item">
             <a class="nav-link text-black-50 py-0 px-2" href="#">Contact</a>
         </ul>
-      </div>
+      </div>  
     </nav>
 
     <!-- <nav class="navbar navbar-expand-lg">
@@ -87,7 +84,7 @@
       </div>
     </nav> -->
 
-    <h1>Hello, world!</h1>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
