added in full screen color for xs screen in nav bar

--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
       </form>
     </nav> -->
 
-    <nav class="navbar navbar-expand flex-column flex-sm-row fixed-top navbar-dark p-0 border-bottom" style="background-color: white;">
-      <a class="navbar-brand bg-info ml-0 ml-sm-3 ml-md-5 p-4 display-4 font-weight-bold" id="font-update">Christopher Lee</a>
-      <div class="navbar-nav-scroll ml-sm-auto mr-0 mr-sm-3 mr-md-5">
-        <ul class="navbar-nav ">
+    <nav class="navbar navbar-expand flex-column flex-sm-row fixed-top navbar-dark p-0 border-bottom bg-white"> 
+      <a class="navbar-brand bg-info ml-0 ml-sm-3 ml-md-5 p-4 font-weight-bold d-none d-sm-block" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</a>
+      <div class="bg-info d-block d-sm-none py-3 font-weight-bold" style="width:100%">
+        <p class="text-center text-white" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</p>
+      </div>
+      <div class="navbar-nav-scroll my-3 ml-sm-auto mr-0 mr-sm-3 mr-md-5">
+        <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link text-black-50 border-right py-0 px-2" href="#">About</a>
           </li>
@@ -60,7 +63,7 @@
           <li class="nav-item">
             <a class="nav-link text-black-50 py-0 px-2" href="#">Contact</a>
         </ul>
-      </div>  
+      </div>
     </nav>
 
     <!-- <nav class="navbar navbar-expand-lg">
