completed first cut nav bar with desired format and functions

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       </form>
     </nav> -->
 
-    <nav class="navbar navbar-expand flex-column flex-sm-row fixed-top navbar-dark p-0 border-bottom bg-white"> 
-      <a class="navbar-brand bg-info ml-0 ml-sm-3 ml-md-5 p-4 font-weight-bold d-none d-sm-block" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</a>
-      <div class="bg-info d-block d-sm-none py-3 font-weight-bold" style="width:100%">
-        <p class="text-center text-white" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</p>
+    <nav class="navbar navbar-expand flex-column flex-sm-row navbar-dark p-0 border-bottom bg-white"> 
+      <a class="navbar-brand bg-info mx-0 ml-sm-3 ml-md-5 p-4 font-weight-bold d-none d-sm-block h-100" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</a>
+      <div class="bg-info d-block d-sm-none p-4 font-weight-bold m-0" style="width:100%">
+        <p class="text-center text-white m-0" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</p>
       </div>
       <div class="navbar-nav-scroll my-3 ml-sm-auto mr-0 mr-sm-3 mr-md-5">
         <ul class="navbar-nav">
@@ -65,6 +65,8 @@
         </ul>
       </div>
     </nav>
+
+    
 
     <!-- <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand navbar-dark bg-dark">Christopher Lee</a>
