--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
         font-family: 'Times New Roman', Times, serif;
         font-size: 30px;
       }
+      body {
+        background-image: url(background-1921589_1920.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
     </style>
     <title>Christopher Lee - Web Dev Portfolio</title>
   </head>
   <body>
    
 <!-- responsive navbar -->
-    <nav class="navbar navbar-expand flex-column flex-md-row navbar-dark p-0 border-bottom bg-white bd-navbar"> 
+    <nav class="navbar navbar-expand flex-column flex-md-row navbar-dark p-0 border-bottom bg-white bd-navbar overflow-hidden"> 
       <!-- existing brand component with responsive margin and hides on xs -->
       <a class="navbar-brand bg-info p-4 font-weight-bold d-none d-md-block h-100 transition-width" style="margin-left:3%;font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</a>
       <!-- appears on xs with background that fills 100% width -->
@@ -40,9 +45,9 @@
       </div>
     </nav>
 
-    <div class="container-fluid no-gutters border-top mr-0 p-0">
-      <div class="row">
-        <div class="col-md-12">
+    <div class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden">
+      <div class="row m-0">
+        <div class="col-md-12 p-0">
           <!-- <div class="card" style="width: 48rem;">
             <div class="card-body">
               <h1 class="card-title">About Me</h1>
@@ -52,7 +57,7 @@
               <a href="#" class="card-link">Another link</a>
             </div>
           </div> -->
-          <div class="jumbotron jumbotron-fluid bg-white border py-2 px-1 my-5 mr-0 mr-md-3 mr-lg-5">
+          <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 1000px;margin: 0 3%">
             <div class="container">
               <div class="row">
                 <div class="col-12">
@@ -60,7 +65,7 @@
                 </div>
               </div>
              
-              <p class="lead"><img src= "profile.jpeg" alt="placeholder" class="img-fluid float-sm-left mr-3 mb-2" style="max-width:446px">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+              <p class="lead"><img src= "profile.jpeg" alt="placeholder" class="img-fluid float-sm-left mr-3 mb-2" style="max-width:510px;">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
             </div>
           </div>
         </div>
