initial full draft of contact.html pending footer

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         background-size: cover;
         background-repeat: no-repeat;
       }
+
+      li {
+        font-size: small;
+      }
     </style>
-    <title>Christopher Lee - Web Dev Portfolio</title>
+    <title>Christopher Lee - About</title>
   </head>
   <body>
    
@@ -34,13 +38,13 @@
       <div class="navbar-nav-scroll my-3 ml-md-auto" style="margin-right:3%">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-black-50 border-right py-0 px-4" href="index.html">About</a>
+            <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black-50 border-right py-0 px-4" href="portfolio.html">Portfolio</a>
+            <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black-50 py-0 px-4" href="contact.html">Contact</a>
+            <a class="nav-link text-black-50 py-0 pl-3" href="contact.html">Contact</a>
         </ul>
       </div>
     </nav>
@@ -57,19 +61,23 @@
               <a href="#" class="card-link">Another link</a>
             </div>
           </div> -->
-          <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 1000px;margin: 0 3%">
+          <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
             <div class="container">
               <div class="row">
                 <div class="col-12">
                   <h1 class="display-5 font-weight-bold border-bottom" style="font-family:'Times New Roman', Times, serif">About Me</h1>
                 </div>
               </div>
-             
-              <p class="lead"><img src= "profile.jpeg" alt="placeholder" class="img-fluid float-sm-left mr-3 mb-2" style="max-width:510px;">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+              <p class="lead">
+                <div class="container float-md-left mr-3 mb-2" style="width:200px">
+                  <img src= "profile.jpeg" alt="placeholder" class="img-fluid" style="max-width:100%;height:auto">
+                </div>
+                
+                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
             </div>
           </div>
         </div>
-      </div>
+        </div>
     </div>
 
 
