--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,119 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <style>
+      #font-update {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 30px;
+      }
+      body {
+        background-image: url(background-1921589_1920.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
 
-    <title>Hello, world!</title>
+      li {
+        font-size: small;
+      }
+      
+    </style>
+    <title>Christopher Lee - Contact</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+   
+<!-- responsive navbar -->
+    <nav class="navbar navbar-expand flex-column flex-md-row navbar-dark p-0 border-bottom bg-white bd-navbar overflow-hidden"> 
+      <!-- existing brand component with responsive margin and hides on xs -->
+      <a class="navbar-brand bg-info p-4 font-weight-bold d-none d-md-block h-100 transition-width" style="margin-left:3%;font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</a>
+      <!-- appears on xs with background that fills 100% width -->
+      <div class="bg-info d-block d-md-none p-4 font-weight-bold m-0" style="width:100%">
+        <p class="text-center text-white m-0" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</p>
+      </div>
+      <!-- nav links -->
+      <div class="navbar-nav-scroll my-3 ml-md-auto" style="margin-right:3%">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-black-50 py-0 pl-3" href="contact.html">Contact</a>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden">
+      <div class="row m-0">
+        <div class="col-md-12 p-0">
+          <!-- <div class="card" style="width: 48rem;">
+            <div class="card-body">
+              <h1 class="card-title">About Me</h1>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div> -->
+          <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
+            <div class="container">
+              <div class="row">
+                <div class="col-12">
+                  <h2 class="display-5 font-weight-bold border-bottom text-info" style="font-family:'Times New Roman', Times, serif">Contact</h2>
+                </div>
+              </div>
+              <form>
+                <div class="form-group">
+                    <label for="nameform">Name</label>
+                    <input type="text" class="form-control" id="nameform" placeholder="John Smith">            
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Email</label>
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Message</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                </div>
+                <button type="submit" class="btn btn-info">Submit</button>
+              </form>
+          </div>
+        </div>
+        </div>
+    </div>
+   
+    <!-- <form>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Example select</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlSelect2">Example multiple select</label>
+        <select multiple class="form-control" id="exampleFormControlSelect2">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+    </form> -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
