added intial layout to portfolio.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-12">
-                  <h1 class="display-5 font-weight-bold border-bottom" style="font-family:'Times New Roman', Times, serif">About Me</h1>
+                  <h2 class="display-5 font-weight-bold border-bottom text-info" style="font-family:'Times New Roman', Times, serif">About Me</h2>
                 </div>
               </div>
               <p class="lead">
