completed first draft portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,25 @@
         background-image: url(background-1921589_1920.jpg);
         background-size: cover;
         background-repeat: no-repeat;
+ 
       }
 
       li {
         font-size: small;
+      }
+
+      .thumbnail {
+        position: relative;
+        width: 100%;
+      }
+
+      .overlay {
+        position: absolute;
+        bottom: 15%;
+        text-align: center;
+        width: 100%;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 20px;
       }
     </style>
     <title>Christopher Lee - About</title>
@@ -68,13 +83,41 @@
                   <h2 class="display-5 font-weight-bold border-bottom text-info" style="font-family:'Times New Roman', Times, serif">Portfolio</h2>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-md-6 p-2 bg-success">
-                  <img src="word-guess.jpg" alt="word-guess game" class="img-thumbnail" style="max-width: 100%;">
-
+              <div class="row m-0">
+                <div class="col-md-6 p-4">
+                  <div class="thumbnail">
+                    <img src="word-guess.jpg" alt="word-guess game" class="mx-auto" style="max-width: 100%;">
+                    <div class="overlay bg-info text-white py-1">Word Guess</div>
+                  </div>
                 </div>
-                <div class="col-md-6 p-2 bg-info">
-                  <img src="word-guess.jpg" alt="word-guess game" class="img-thumbnail" style="max-width: 100%;">
+                <div class="col-md-6 p-4">
+                  <div class="thumbnail">
+                    <img src="rpg.jpg" alt="rpg game" class="mx-auto" style="max-width: 100%;">
+                    <div class="overlay bg-info text-white py-1">RPG Game</div>
+                  </div>
+                </div>
+              <div class="row m-0">
+                <div class="col-md-6 p-4">
+                  <div class="thumbnail">
+                    <img src="trivia1.jpg" alt="trivia game" class="mx-auto" style="max-width: 100%;">
+                    <div class="overlay bg-info text-white py-1">Trivia Game</div>
+                  </div>
+                </div>
+                <div class="col-md-6 p-4">
+                  <div class="thumbnail">
+                    <img src="info3.jpg" alt="info widget" class="mx-auto" style="max-width: 100%;">
+                    <div class="overlay bg-info text-white py-1">Info Widget</div>
+                  </div>
+                </div>
+              </div><div class="row m-0">
+                <div class="col-md-6 p-4">
+                  <div class="thumbnail">
+                    <img src="rps2.jpg" alt="rock paper scissors game" class="mx-auto" style="max-width: 100%;">
+                    <div class="overlay bg-info text-white py-1">Rock Paper Scissors</div>
+                  </div>
+                </div>
+                <div class="col-md-6 p-4">
+                  
                 </div>
               </div>
             </div>
