--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,20 @@
       li {
         font-size: small;
       }
-      
+      html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+}
     </style>
     <title>Christopher Lee - Contact</title>
   </head>
@@ -53,15 +66,7 @@
     <div class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden">
       <div class="row m-0">
         <div class="col-md-12 p-0">
-          <!-- <div class="card" style="width: 48rem;">
-            <div class="card-body">
-              <h1 class="card-title">About Me</h1>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div> -->
+
           <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
             <div class="container">
               <div class="row">
@@ -89,37 +94,12 @@
         </div>
     </div>
    
-    <!-- <form>
-      <div class="form-group">
-        <label for="exampleFormControlInput1">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="form-group">
-        <label for="exampleFormControlSelect1">Example select</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="exampleFormControlSelect2">Example multiple select</label>
-        <select multiple class="form-control" id="exampleFormControlSelect2">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="exampleFormControlTextarea1">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-    </form> -->
-
+    <footer class="footer">
+      <div class="container-fluid text-center text-white bg-secondary border-top border-info">
+        &copy;Copyright
+        </div>
+  
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
