--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
       li {
         font-size: small;
       }
+
+      html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+}
     </style>
     <title>Christopher Lee - About</title>
   </head>
@@ -80,7 +95,12 @@
         </div>
     </div>
 
-
+    <footer class="footer">
+      <div class="container-fluid text-center text-white bg-secondary border-top border-info">
+        &copy;Copyright
+        </div>
+  
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
