--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <style>
       #font-update {
         font-family: 'Times New Roman', Times, serif;
@@ -36,6 +37,21 @@
         font-family: 'Times New Roman', Times, serif;
         font-size: 20px;
       }
+
+      html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+}
     </style>
     <title>Christopher Lee - About</title>
   </head>
@@ -64,18 +80,9 @@
       </div>
     </nav>
 
-    <div class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden">
+    <div class="container-fluid no-gutters border-top border-bottom border-info mr-0 p-0 overflow-hidden">
       <div class="row m-0">
         <div class="col-md-12 p-0">
-          <!-- <div class="card" style="width: 48rem;">
-            <div class="card-body">
-              <h1 class="card-title">About Me</h1>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div> -->
           <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
             <div class="container">
               <div class="row">
@@ -126,6 +133,12 @@
         </div>
     </div>
 
+    <footer class="footer">
+      <div class="container-fluid text-center text-white bg-secondary border-top border-info">
+        &copy;Copyright
+        </div>
+  
+    </footer>
 
 
     <!-- Optional JavaScript -->
