--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <style>
-      #font-update {
+#font-update {
         font-family: 'Times New Roman', Times, serif;
         font-size: 30px;
       }
@@ -16,25 +16,43 @@
         background-image: url(background-1921589_1920.jpg);
         background-size: cover;
         background-repeat: no-repeat;
+ 
       }
 
       li {
         font-size: small;
       }
+
+      .thumbnail {
+        position: relative;
+        width: 100%;
+      }
+
+      .overlay {
+        position: absolute;
+        bottom: 15%;
+        text-align: center;
+        width: 100%;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 20px;
+      }
+
       html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  margin-bottom: 60px; /* Margin bottom by footer height */
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-}
+        position: relative;
+        min-height: 100%;
+      }
+      
+      body {
+        margin-bottom: 60px; /* Margin bottom by footer height */
+      }
+      
+      .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 60px; /* Set the fixed height of the footer here */
+        line-height: 60px; /* Vertically center the text there */
+      }
     </style>
     <title>Christopher Lee - Contact</title>
   </head>
