--- a/portfolio.html
+++ b/portfolio.html
@@ -24,36 +24,32 @@
         font-size: small;
       }
 
-      .thumbnail {
-        position: relative;
-        width: 100%;
-      }
-
       .overlay {
-        position: absolute;
+        /* position: absolute; */
         bottom: 15%;
-        text-align: center;
-        width: 100%;
+        /* text-align: center; */
         font-family: 'Times New Roman', Times, serif;
         font-size: 20px;
       }
 
       html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  margin-bottom: 60px; /* Margin bottom by footer height */
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-}
+        position: relative;
+        min-height: 100%;
+      }
+      
+      body {
+        margin-bottom: 60px; /* Margin bottom by footer height */
+      }
+      
+      .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 60px; /* Set the fixed height of the footer here */
+        line-height: 60px; /* Vertically center the text there */
+      }
     </style>
-    <title>Christopher Lee - About</title>
+    <title>Christopher Lee - Portfolio</title>
   </head>
   <body>
    
@@ -92,35 +88,37 @@ body {
               </div>
               <div class="row m-0">
                 <div class="col-md-6 p-4">
-                  <div class="thumbnail">
+                  <div class="position-relative w-100">
                     <img src="word-guess.jpg" alt="word-guess game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay bg-info text-white py-1">Word Guess</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Word Guess</div>
                   </div>
                 </div>
                 <div class="col-md-6 p-4">
-                  <div class="thumbnail">
+                  <div class="position-relative w-100">
                     <img src="rpg.jpg" alt="rpg game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay bg-info text-white py-1">RPG Game</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">RPG Game</div>
                   </div>
                 </div>
+              </div>
               <div class="row m-0">
                 <div class="col-md-6 p-4">
-                  <div class="thumbnail">
+                  <div class="position-relative w-100">
                     <img src="trivia1.jpg" alt="trivia game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay bg-info text-white py-1">Trivia Game</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Trivia Game</div>
                   </div>
                 </div>
                 <div class="col-md-6 p-4">
-                  <div class="thumbnail">
+                  <div class="position-relative w-100">
                     <img src="info3.jpg" alt="info widget" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay bg-info text-white py-1">Info Widget</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Info Widget</div>
                   </div>
                 </div>
-              </div><div class="row m-0">
+              </div>
+              <div class="row m-0">
                 <div class="col-md-6 p-4">
-                  <div class="thumbnail">
+                  <div class="position-relative w-100">
                     <img src="rps2.jpg" alt="rock paper scissors game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay bg-info text-white py-1">Rock Paper Scissors</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Rock Paper Scissors</div>
                   </div>
                 </div>
                 <div class="col-md-6 p-4">
