--- a/portfolio.html
+++ b/portfolio.html
@@ -54,27 +54,27 @@
   <body>
    
 <!-- responsive navbar -->
-    <nav class="navbar navbar-expand flex-column flex-md-row navbar-dark p-0 border-bottom bg-white bd-navbar overflow-hidden"> 
-      <!-- existing brand component with responsive margin and hides on xs -->
-      <a class="navbar-brand bg-info p-4 font-weight-bold d-none d-md-block h-100 transition-width" style="margin-left:3%;font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</a>
-      <!-- appears on xs with background that fills 100% width -->
-      <div class="bg-info d-block d-md-none p-4 font-weight-bold m-0" style="width:100%">
-        <p class="text-center text-white m-0" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</p>
-      </div>
-      <!-- nav links -->
-      <div class="navbar-nav-scroll my-3 ml-md-auto" style="margin-right:3%">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-black-50 py-0 pl-3" href="contact.html">Contact</a>
-        </ul>
-      </div>
-    </nav>
+<nav class="navbar navbar-expand flex-column flex-md-row navbar-dark p-0 border-bottom bg-white bd-navbar overflow-hidden"> 
+  <!-- existing brand component with responsive margin and hides on xs -->
+  <a class="navbar-brand p-4 font-weight-bold d-none d-md-block h-100" style="margin-left:3%;font-family: 'Times New Roman', Times, serif;font-size: 30px; background-color:#59AAA5">Christopher Lee</a>
+  <!-- appears on xs with background that fills 100% width -->
+  <div class="d-block d-md-none p-4 font-weight-bold m-0" style="width:100%; background-color:#59AAA5">
+    <p class="text-center text-white m-0" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</p>
+  </div>
+  <!-- nav links -->
+  <div class="navbar-nav-scroll my-3 ml-md-auto" style="margin-right:3%">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-black-50 py-0 pl-3" href="contact.html">Contact</a>
+    </ul>
+  </div>
+</nav>
 
     <div class="container-fluid no-gutters border-top border-bottom border-info mr-0 p-0 overflow-hidden">
       <div class="row m-0">
