update to color scheme to align with original

--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <style>
-#font-update {
-        font-family: 'Times New Roman', Times, serif;
-        font-size: 30px;
-      }
-      body {
-        background-image: url(background-1921589_1920.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
- 
-      }
 
       li {
         font-size: small;
@@ -81,7 +71,7 @@
   </div>
 </nav>
 
-    <div class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden">
+    <div class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden bg-light">
       <div class="row m-0">
         <div class="col-md-12 p-0">
 
@@ -89,7 +79,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-12">
-                  <h2 class="display-5 font-weight-bold border-bottom text-info" style="font-family:'Times New Roman', Times, serif">Contact</h2>
+                  <h2 class="display-5 font-weight-bold border-bottom" style="color:#59AAA5; font-family:'Times New Roman', Times, serif">Contact</h2>
                 </div>
               </div>
               <form>
@@ -105,14 +95,14 @@
                   <label for="exampleFormControlTextarea1">Message</label>
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
                 </div>
-                <button type="submit" class="btn btn-info">Submit</button>
+                <button type="submit" class="btn" style="background-color: #59AAA5; color:white">Submit</button>
               </form>
             </div>  
           </div>
         </div>
       </div>
     </div>
-   
+    <div class="container-fluid no-gutters mr-0 pt-1 overflow-hidden" style="background-color: #59AAA5;"></div>
     <footer class="footer">
       <div class="container-fluid text-center text-white bg-secondary border-top border-info">
         &copy;Copyright
