--- a/portfolio.html
+++ b/portfolio.html
@@ -9,16 +9,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <style>
-      #font-update {
-        font-family: 'Times New Roman', Times, serif;
-        font-size: 30px;
-      }
-      body {
-        background-image: url(background-1921589_1920.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
- 
-      }
 
       li {
         font-size: small;
@@ -30,6 +20,7 @@
         /* text-align: center; */
         font-family: 'Times New Roman', Times, serif;
         font-size: 20px;
+        background-color:#59AAA5;
       }
 
       html {
@@ -76,27 +67,27 @@
   </div>
 </nav>
 
-    <div class="container-fluid no-gutters border-top border-bottom border-info mr-0 p-0 overflow-hidden">
+    <div class="container-fluid no-gutters border-top border-bottom bg-light mr-0 p-0 overflow-hidden">
       <div class="row m-0">
         <div class="col-md-12 p-0">
           <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
             <div class="container">
               <div class="row">
                 <div class="col-12">
-                  <h2 class="display-5 font-weight-bold border-bottom text-info" style="font-family:'Times New Roman', Times, serif">Portfolio</h2>
+                  <h2 class="display-5 font-weight-bold border-bottom" style="color:#59AAA5; font-family:'Times New Roman', Times, serif">Portfolio</h2>
                 </div>
               </div>
               <div class="row m-0">
                 <div class="col-md-6 p-4">
                   <div class="position-relative w-100">
                     <img src="word-guess.jpg" alt="word-guess game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Word Guess</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center text-white py-1">Word Guess</div>
                   </div>
                 </div>
                 <div class="col-md-6 p-4">
                   <div class="position-relative w-100">
                     <img src="rpg.jpg" alt="rpg game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">RPG Game</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center  text-white py-1">RPG Game</div>
                   </div>
                 </div>
               </div>
@@ -104,13 +95,13 @@
                 <div class="col-md-6 p-4">
                   <div class="position-relative w-100">
                     <img src="trivia1.jpg" alt="trivia game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Trivia Game</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center  text-white py-1">Trivia Game</div>
                   </div>
                 </div>
                 <div class="col-md-6 p-4">
                   <div class="position-relative w-100">
                     <img src="info3.jpg" alt="info widget" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Info Widget</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center  text-white py-1">Info Widget</div>
                   </div>
                 </div>
               </div>
@@ -118,7 +109,7 @@
                 <div class="col-md-6 p-4">
                   <div class="position-relative w-100">
                     <img src="rps2.jpg" alt="rock paper scissors game" class="mx-auto" style="max-width: 100%;">
-                    <div class="overlay position-absolute w-100 b-5 text-center bg-info text-white py-1">Rock Paper Scissors</div>
+                    <div class="overlay position-absolute w-100 b-5 text-center  text-white py-1">Rock Paper Scissors</div>
                   </div>
                 </div>
                 <div class="col-md-6 p-4">
@@ -130,7 +121,7 @@
         </div>
         </div>
     </div>
-
+    <div class="container-fluid no-gutters mr-0 pt-1 overflow-hidden" style="background-color: #59AAA5;"></div>
     <footer class="footer">
       <div class="container-fluid text-center text-white bg-secondary border-top border-info">
         &copy;Copyright
