updates to readme and minor formatting

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,14 +10,8 @@
 
     <style>
 
-      li {
-        font-size: small;
-      }
-
       .overlay {
-        /* position: absolute; */
         bottom: 15%;
-        /* text-align: center; */
         font-family: 'Times New Roman', Times, serif;
         font-size: 20px;
         background-color:#59AAA5;
@@ -42,7 +36,7 @@
     </style>
     <title>Christopher Lee - Portfolio</title>
   </head>
-  <body>
+  <body class="bg-light">
    
 <!-- responsive navbar -->
 <nav class="navbar navbar-expand flex-column flex-md-row navbar-dark p-0 border-bottom bg-white bd-navbar overflow-hidden"> 
@@ -56,27 +50,28 @@
   <div class="navbar-nav-scroll my-3 ml-md-auto" style="margin-right:3%">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html">About</a>
+        <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html"><small>About</small></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html">Portfolio</a>
+        <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html"><small>Portfolio</small></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black-50 py-0 pl-3" href="contact.html">Contact</a>
+        <a class="nav-link text-black-50 py-0 pl-3" href="contact.html"><small>Contact</small></a>
     </ul>
   </div>
 </nav>
 
-    <div class="container-fluid no-gutters border-top border-bottom bg-light mr-0 p-0 overflow-hidden">
+    <main class="container-fluid no-gutters border-top border-bottom bg-light mr-0 p-0 overflow-hidden">
       <div class="row m-0">
         <div class="col-md-12 p-0">
-          <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
+          <section class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
             <div class="container">
               <div class="row">
                 <div class="col-12">
                   <h2 class="display-5 font-weight-bold border-bottom" style="color:#59AAA5; font-family:'Times New Roman', Times, serif">Portfolio</h2>
                 </div>
               </div>
+              <!-- portfolio items -->
               <div class="row m-0">
                 <div class="col-md-6 p-4">
                   <div class="position-relative w-100">
@@ -112,23 +107,22 @@
                     <div class="overlay position-absolute w-100 b-5 text-center  text-white py-1">Rock Paper Scissors</div>
                   </div>
                 </div>
-                <div class="col-md-6 p-4">
-                  
+                <div class="col-md-6 p-4">  
                 </div>
               </div>
             </div>
-          </div>
+          </section>
         </div>
         </div>
-    </div>
-    <div class="container-fluid no-gutters mr-0 pt-1 overflow-hidden" style="background-color: #59AAA5;"></div>
-    <footer class="footer">
-      <div class="container-fluid text-center text-white bg-secondary border-top border-info">
+      </main>
+    <!-- line above footer -->
+    <!-- footer -->
+      <footer class="footer">
+        <div class="container-fluid no-gutters mr-0 pt-1 overflow-hidden" style="background-color: #59AAA5;"></div>
+        <div class="container-fluid text-center text-white bg-secondary border-top border-info">
         &copy;Copyright
         </div>
-  
-    </footer>
-
+      </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
