--- a/contact.html
+++ b/contact.html
@@ -9,24 +9,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <style>
 
-      li {
-        font-size: small;
-      }
-
-      .thumbnail {
-        position: relative;
-        width: 100%;
-      }
-
-      .overlay {
-        position: absolute;
-        bottom: 15%;
-        text-align: center;
-        width: 100%;
-        font-family: 'Times New Roman', Times, serif;
-        font-size: 20px;
-      }
-
       html {
         position: relative;
         min-height: 100%;
@@ -46,13 +28,13 @@
     </style>
     <title>Christopher Lee - Contact</title>
   </head>
-  <body>
+  <body class="bg-light">
    
 <!-- responsive navbar -->
 <nav class="navbar navbar-expand flex-column flex-md-row navbar-dark p-0 border-bottom bg-white bd-navbar overflow-hidden"> 
-  <!-- existing brand component with responsive margin and hides on xs -->
+  <!-- existing brand component with responsive margin and hides on larger screens -->
   <a class="navbar-brand p-4 font-weight-bold d-none d-md-block h-100" style="margin-left:3%;font-family: 'Times New Roman', Times, serif;font-size: 30px; background-color:#59AAA5">Christopher Lee</a>
-  <!-- appears on xs with background that fills 100% width -->
+  <!-- appears on smaller screens with background that fills 100% width -->
   <div class="d-block d-md-none p-4 font-weight-bold m-0" style="width:100%; background-color:#59AAA5">
     <p class="text-center text-white m-0" style="font-family: 'Times New Roman', Times, serif;font-size: 30px;">Christopher Lee</p>
   </div>
@@ -60,28 +42,30 @@
   <div class="navbar-nav-scroll my-3 ml-md-auto" style="margin-right:3%">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html">About</a>
+        <a class="nav-link text-black-50 border-right py-0 px-3" href="index.html"><small>About</small></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html">Portfolio</a>
+        <a class="nav-link text-black-50 border-right py-0 px-3" href="portfolio.html"><small>Portfolio</small></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black-50 py-0 pl-3" href="contact.html">Contact</a>
+        <a class="nav-link text-black-50 py-0 pl-3" href="contact.html"><small>Contact</small></a>
     </ul>
   </div>
 </nav>
 
-    <div class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden bg-light">
+    <main class="container-fluid no-gutters border-top mr-0 p-0 overflow-hidden bg-light">
       <div class="row m-0">
         <div class="col-md-12 p-0">
-
-          <div class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
+          <section class="jumbotron bg-white border py-2 px-1 my-5" style="max-width: 725px;margin: 0 3%">
             <div class="container">
+              <!-- sub-row -->
               <div class="row">
-                <div class="col-12">
+                <!-- header -->
+                <header class="col-12">
                   <h2 class="display-5 font-weight-bold border-bottom" style="color:#59AAA5; font-family:'Times New Roman', Times, serif">Contact</h2>
-                </div>
+                </header>
               </div>
+              <!-- form -->
               <form>
                 <div class="form-group">
                     <label for="nameform">Name</label>
@@ -98,17 +82,19 @@
                 <button type="submit" class="btn" style="background-color: #59AAA5; color:white">Submit</button>
               </form>
             </div>  
-          </div>
+          </section>
         </div>
       </div>
-    </div>
-    <div class="container-fluid no-gutters mr-0 pt-1 overflow-hidden" style="background-color: #59AAA5;"></div>
-    <footer class="footer">
-      <div class="container-fluid text-center text-white bg-secondary border-top border-info">
+    </main>
+    <!-- line above footer -->
+
+    <!-- footer -->
+      <footer class="footer">
+        <div class="container-fluid no-gutters mr-0 pt-1 overflow-hidden" style="background-color: #59AAA5;"></div>
+        <div class="container-fluid text-center text-white bg-secondary border-top border-info">
         &copy;Copyright
         </div>
-  
-    </footer>
+      </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
